--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     }
   },
   "require": {
-    "vitessecms/sef": "~0.0.1"
+    "vitessecms/sef": "~0.0.1",
+    "vitessecms/core": "~0.0.1"
   }
 }
