--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "keywords": ["php","phalcon","vitessecms"],
   "homepage": "https://github.com/thedigitalproblemsolver/VitesseCMS",
   "license": "GPL-2.0-or-later",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "authors": [
     {
       "name": "Jasper Jaklofsky",
@@ -19,6 +19,7 @@
   },
   "require": {
     "vitessecms/sef": "~0.0.1",
-    "vitessecms/core": "~0.0.1"
+    "vitessecms/core": "~0.0.1",
+    "mustache/mustache": "^2.11"
   }
 }
