--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
   "require": {
     "vitessecms/sef": "~0.2.1",
     "vitessecms/core": "~0.2.15",
+    "vitessecms/admin": "~0.2.8",
+    "vitessecms/cli": "~0.2.3",
     "mustache/mustache": "^2.11"
   }
 }
