--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     }
   },
   "require": {
-    php": ">=8.1",
+    "php": ">=8.1",
     "ext-phalcon": "5.1.4",
     "vitessecms/sef": "~0.3.0",
     "vitessecms/core": "~0.4.0",
