Handle embedded views and url

--- a/src/Template/core/settings.ini
+++ b/src/Template/core/settings.ini
@@ -13,3 +13,6 @@ maincontent = Main Content
 belowMaincontent = Below main content
 topbar = Topbar
 myaccount = Myaccount
+
+[embedded_positions]
+maincontent = Main Content
