admin controller changes

--- a/src/Template/core/settings.ini
+++ b/src/Template/core/settings.ini
@@ -16,3 +16,13 @@ myaccount = Myaccount
 
 [embedded_positions]
 maincontent = Main Content
+
+[admin_positions]
+left = Left
+logo = Logo
+header = Header
+footer = Footer
+menu = Menu
+languageswitch = LanguageSwitch
+topbar = Topbar
+myaccount = Myaccount
