--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,14 @@
     "php": ">=8.1",
     "ext-phalcon": "5.1.4",
     "vitessecms/sef": "~0.3.4",
-    "vitessecms/core": "~0.5.1",
-    "vitessecms/admin": "~0.5.1",
-    "vitessecms/cli": "~0.3.3",
-    "vitessecms/form": "~0.4.5",
-    "vitessecms/database": "~0.3.5",
-    "vitessecms/block": "~0.5.1",
-    "vitessecms/datagroup": "~0.4.2",
-    "vitessecms/datafield": "~0.3.4",
+    "vitessecms/core": "^1.0.0",
+    "vitessecms/admin": "^1.0.0",
+    "vitessecms/cli": "^1.0.0",
+    "vitessecms/form": "^1.0.0",
+    "vitessecms/database": "^1.0.0",
+    "vitessecms/block": "^1.0.0",
+    "vitessecms/datagroup": "^1.0.0",
+    "vitessecms/datafield": "^1.0.0",
     "mustache/mustache": "^2.14.2"
   }
 }
