--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   "require": {
     "php": ">=8.1",
     "ext-phalcon": "5.1.4",
-    "vitessecms/sef": "~0.3.4",
+    "vitessecms/sef": "^1.0.0",
     "vitessecms/core": "^1.0.0",
     "vitessecms/admin": "^1.0.0",
     "vitessecms/cli": "^1.0.0",
