Added AdminToolbar position

--- a/src/Template/core/settings.ini
+++ b/src/Template/core/settings.ini
@@ -12,10 +12,11 @@ aboveMaincontent = Above main content
 maincontent = Main Content
 belowMaincontent = Below main content
 topbar = Topbar
+admintoolbar = Admin Toolbar
 myaccount = Myaccount
 
 [embedded_positions]
 maincontent = Main Content
 
 [admin_positions]
-topbar = Topbar
+admintoolbar = Admin Toolbar
